2001-06-30  James R. Van Zandt  <jrv@vanzandt.mv.com>

	* docs/gnuplot.doc: Introduced "latitude" and "longitude"
	terminology into description of spherical coordinate system.
	The CGM terminal supports PM3D.

	* demo/surface1.dem: In first sinc function plot, move label and
	arrow so it does not interfere with Z axis.  Add two sample "fence"
	plots using different methods.  In data grid plotting with
	"using", correct X and Y axis labels.  Add sample splot of part of
	a data file (i.e. using "every") and hidden3d.  Repeat with pm3d.
	Change title from "spherical transformation" to "spherical
	coordinates".  Add title for Mandelbrot plot.

2001-06-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (xtick_callback, ytick_callback, ztick_callback)
 	[PM3D]: Fill in field `real_z' of all ticmark endpoints.

	* src/hidden3d.c (split_line_at_ratio) [PM3D]: Fill in field
 	`real_z', too.
2001-06-28  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* term/x11.trm: More verbose error message if X11 driver
	can't be started

2001-06-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (histeps_current_plot, histeps_compare): New
 	file-scope variable and comparison function, used in applying
 	qsort() to sorting the datapoints in "histeps" mode.
	(plot_histeps): Use qsort() instead of homegrown bubblesort
 	implementation to sort datapoints by x. Removed now-unused locals
 	'bigi' and 'hold'.
	(plot_histeps): Don't blindly assume 0.0 is the baseline y
 	position for the histogram.  For logarithmic y axis, it isn't.
	Set up new local 'y_null' to hold the correct position.
	
2001-06-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/wtext.c: Hotkeys Ctrl-Insert and Shift-Insert for
	clipboard access.

2001-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/misc.c (lp_parse): Changed two arguments' type from int to
 	the more proper TBOOLEAN. Restructured handling of point symbol